==> chcbaram/apm32e103-kit/firmware/exam/EX-14-OLED/src/hw/driver/i2c.c <==
#include "i2c.h"
#include "cli.h"
#include "hal/hal_i2c.h"
#define lock()      xSemaphoreTake(mutex_lock, portMAX_DELAY);
#define unLock()    xSemaphoreGive(mutex_lock);
#define lock()
#define unLock()

bool i2cInit(void)
{
  uint32_t i;

#ifdef _USE_HW_RTOS
  mutex_lock = xSemaphoreCreateMutex();
#endif

  for (i=0; i<I2C_MAX_CH; i++)
  {
    i2c_timeout[i] = 10;
    i2c_errcount[i] = 0;
    is_begin[i] = false;
  }

  logPrintf("[OK] i2cInit()\n");

#if CLI_USE(HW_I2C)
  cliAdd("i2c", cliI2C);
#endif

  is_init = true;
  return true;
}

bool i2cBegin(uint8_t ch, uint32_t freq_khz)
{
  bool ret = false;
  GPIO_Config_T gpioConfigStruct;
  I2C_Config_T *p_handle = i2c_tbl[ch].p_hi2c;

  if (ch >= I2C_MAX_CH)
  {
    return false;
  }


  switch(ch)
  {
    case _DEF_I2C1:
      i2c_freq[ch] = freq_khz;

      RCM_EnableAPB2PeriphClock(RCM_APB2_PERIPH_GPIOB | RCM_APB2_PERIPH_AFIO);
      RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_I2C1);

      i2cReset(ch);

      /* Free I2C_SCL and I2C_SDA */
      gpioConfigStruct.mode  = GPIO_MODE_AF_OD;
      gpioConfigStruct.speed = GPIO_SPEED_50MHz;
      gpioConfigStruct.pin   = GPIO_PIN_6;
      GPIO_Config(GPIOB, &gpioConfigStruct);

      gpioConfigStruct.mode  = GPIO_MODE_AF_OD;
      gpioConfigStruct.speed = GPIO_SPEED_50MHz;
      gpioConfigStruct.pin   = GPIO_PIN_7;
      GPIO_Config(GPIOB, &gpioConfigStruct);


      p_handle->mode        = I2C_MODE_I2C;
      p_handle->dutyCycle   = I2C_DUTYCYCLE_2;
      p_handle->ackAddress  = I2C_ACK_ADDRESS_7BIT;
      p_handle->ownAddress1 = 0xA0;
      p_handle->ack         = I2C_ACK_ENABLE;
      p_handle->clockSpeed  = freq_khz * 1000;

      I2C_Reset(i2c_tbl[ch].p_i2c);
      I2C_Config(i2c_tbl[ch].p_i2c, p_handle);

      /* NVIC coniguration */
      // NVIC_EnableIRQRequest(I2C1_EV_IRQn, 1, 0);
      /* Enable the I2C1 Interrupt */
      // I2C_EnableInterrupt(i2c_tbl[ch].p_i2c, I2C_INT_EVT);

      I2C_Enable(i2c_tbl[ch].p_i2c);

      ret = true;
      is_begin[ch] = true;
      break;

    case _DEF_I2C2:
      i2c_freq[ch] = freq_khz;

      RCM_EnableAPB2PeriphClock(RCM_APB2_PERIPH_GPIOB | RCM_APB2_PERIPH_AFIO);
      RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_I2C2);

      i2cReset(ch);

      /* Free I2C_SCL and I2C_SDA */
      gpioConfigStruct.mode  = GPIO_MODE_AF_OD;
      gpioConfigStruct.speed = GPIO_SPEED_50MHz;
      gpioConfigStruct.pin   = GPIO_PIN_10;
      GPIO_Config(GPIOB, &gpioConfigStruct);

      gpioConfigStruct.mode  = GPIO_MODE_AF_OD;
      gpioConfigStruct.speed = GPIO_SPEED_50MHz;
      gpioConfigStruct.pin   = GPIO_PIN_11;
      GPIO_Config(GPIOB, &gpioConfigStruct);


      p_handle->mode        = I2C_MODE_I2C;
      p_handle->dutyCycle   = I2C_DUTYCYCLE_2;
      p_handle->ackAddress  = I2C_ACK_ADDRESS_7BIT;
      p_handle->ownAddress1 = 0xA0;
      p_handle->ack         = I2C_ACK_ENABLE;
      p_handle->clockSpeed  = freq_khz * 1000;

      I2C_Reset(i2c_tbl[ch].p_i2c);
      I2C_Config(i2c_tbl[ch].p_i2c, p_handle);

      I2C_Enable(i2c_tbl[ch].p_i2c);

      ret = true;
      is_begin[ch] = true;
      break;
  }

  return ret;
}

void i2cReset(uint8_t ch)
{
  GPIO_Config_T  GPIO_InitStruct;
  i2c_tbl_t *p_pin = &i2c_tbl[ch];

  lock();
  GPIO_InitStruct.pin       = p_pin->scl_pin;
  GPIO_InitStruct.mode      = GPIO_MODE_OUT_OD;
  GPIO_InitStruct.speed     = GPIO_SPEED_10MHz;
  GPIO_Config(p_pin->scl_port, &GPIO_InitStruct);

  GPIO_InitStruct.pin       = p_pin->sda_pin;
  GPIO_InitStruct.mode      = GPIO_MODE_OUT_OD;
  GPIO_Config(p_pin->sda_port, &GPIO_InitStruct);


  GPIO_WriteBitValue(p_pin->scl_port, p_pin->scl_pin, _DEF_HIGH);
  GPIO_WriteBitValue(p_pin->sda_port, p_pin->sda_pin, _DEF_HIGH);
  delayUs(5);

  for (int i = 0; i < 9; i++)
  {

    GPIO_WriteBitValue(p_pin->scl_port, p_pin->scl_pin, _DEF_LOW);
    delayUs(5);
    GPIO_WriteBitValue(p_pin->scl_port, p_pin->scl_pin, _DEF_HIGH);
    delayUs(5);
  }

  GPIO_WriteBitValue(p_pin->scl_port, p_pin->scl_pin, _DEF_LOW);
  delayUs(5);
  GPIO_WriteBitValue(p_pin->sda_port, p_pin->sda_pin, _DEF_LOW);
  delayUs(5);

  GPIO_WriteBitValue(p_pin->scl_port, p_pin->scl_pin, _DEF_HIGH);
  delayUs(5);
  GPIO_WriteBitValue(p_pin->sda_port, p_pin->sda_pin, _DEF_HIGH);
  unLock();
}
